<resources>
    <string name="app_name">Marcador de Truco</string>
    <string name="marcador_truco">Marcador Truco</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_11">11</string>
    <string name="_10">10</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="_6">6</string>
    <string name="_3">3</string>
    <string name="time1">Time 1</string>
    <string name="time2">Time 2</string>
    <string name="tentos">Tentos</string>
    <string name="opcoes">Opções</string>
    <string name="ajuda">Ajuda</string>
    <string name="marcadores">Marcadores</string>
    <string name="fisico">Fisico</string>
    <string name="digital">Digital</string>
    <string name="creditos">créditos</string>
    <string name="truco">Truco</string>
    <string name="avalie">Avalie</string>
    <string name="bttruco_lay_ajuda">Pontuações do truco</string>
    <string name="btdimi_lay_ajuda">Diminuir pontuação</string>
    <string name="btadc_lay_ajuda">Adicionar pontuação</string>
    <string name="pontos_lay_ajuda">Pontuação do jogo</string>
    <string name="ponts_fis_ajuda">clicar na pontuação</string>
    <string name="ptstentos">clicar na pontuação dos tentos</string>
    <string name="tutorial_marcdor_digital">tutorial_marcdor_digital</string>
    <string name="tutorial_marcdor_fisico">tutorial_marcdor_fisico</string>
    <string name="marcadordetruco">Marcador de truco</string>
    <string name="jls">JLS</string>
    <string name="rodadas">Rodadas</string>
</resources>
